2007-02-27  Nurdin Premji  <npremji@redhat.com>

	* ProcName.java: Added error value.
	* cni/PtraceAccessors.cxx (accessReg):  Added logging message for return value.
	(getProcName): Pass in a unw_word_t struct rather than a pointer to UPT_get_proc_name.
	Don't log a message with the buffer if UPT_get_proc_name returns a bad buffer.
	* cni/UnwindNative.cxx (getProcName): Reflect update to ProcName.
	(native_get_proc_name): Return the error stored in ProcName.

2007-02-27  Andrew Cagney  <cagney@redhat.com>

	* FrameCursor.java (procOffset, getProcOffset): Put back.
	(getProcInfoStart): Rename getProcStart.
	(getProcEnd): Replace getProcSize.
	* cni/FrameCursor.cxx (create_frame_cursor): Update.
	
2007-02-27  Nurdin Premji  <npremji@redhat.com>

	* ProcInfo.java: Added error value.
	* cni/PtraceAccessors.cxx (findProcInfo): Set ProcInfo error value.
	* cni/UnwindNative.cxx: (findProcInfo): Return accessors procInfo error value.

2007-02-27  Andrew Cagney  <cagney@redhat.com>

	* FrameCursor.java (procOffset, getProcOffset): Delete.
	(procStart, getProcStart, procEnd, getProcEnd): Define.
	* cni/FrameCursor.cxx (create_frame_cursor): Set .procStart and
	.procSize.

2007-02-26  Nurdin Premji  <npremji@redhat.com>

	* cni/UnwindNative.cxx: (native_access_mem): Fixed to actually copy value back
	as native_access_reg does.
	(native_access_fpreg): Ditto.

	* cni/PtraceAccessors.cxx (getProcName): Added another logging message.
	Simplified return.
	(findProcInfo): Added another logging message.
	* cni/UnwindNative.cxx (native_get_proc_name): Fixed to properly copy over
	the proc name.
	(getProcName): Added another logging message.
	(destroyAddressSpace): Don't log RawData objects, they segfault.
	(isSignalFrame): Ditto.
	(setCachingPolicy): Ditto.
	(step): Ditto.

2007-02-23  Nurdin Premji  <npremji@redhat.com>

	* cni/PtraceAccessors.cxx: Added entry logging messages.
	* cni/UnwindNative.cxx: Ditto.

2007-02-23  Andrew Cagney  <cagney@redhat.com>
