@@ -1,3 +1,11 @@
+2007-03-01  Mike Cvet  <mcvet@redhat.com>
+
+	* StackTraceCreator.java (UnwindArgs.cleanup): Added. Moved code from 
+	finalize() to here since UnwindArgs objects did not appear to have finalize()
+	getting called.
+	(finalize): Removed.
+	(createStackTrace): Clean up and null out previous UnwindArgs objects.
+
 2007-02-27  Nurdin Premji  <npremji@redhat.com>
 
 	* ProcName.java: Added error value.
